--- a/src/sass/components/_details.sass
+++ b/src/sass/components/_details.sass
@@ -19,6 +19,8 @@ details
 			background-color: var(--bg-details)
 	& > div
 		padding: .5rem
+		overflow-x: auto
+		word-wrap: break-word
 details[open]
 	summary 
 		background-color: var(--bg-details-open)
